add ingredients embeddings batch upload
